--- a/templates/auction.templ
+++ b/templates/auction.templ
@@ -89,9 +89,13 @@ templ auctionLotsList(auction *types.Auction, auctionLots []types.AuctionLot) {
         if len(auctionLots) == 0 {
             <p>This auction doesn't have any lots yet</p>
         }
-        <button type="button" hx-target="#auction-lots-list" hx-swap="beforeend" hx-post={ utils.ConvertToTemplStringURL("my-auctions", auction.ID, "lots") }>Add a lot</button>
+        <button type="button"
+            hx-target="#auction-lots-archived-list"
+            hx-swap="beforeend show:bottom"
+            hx-post={ utils.ConvertToTemplStringURL("my-auctions", auction.ID, "lots") }
+        >Add a lot</button>
         <h3>Archived auction lots</h3>
-        <ul class="no-list-bullet-point">
+        <ul class="no-list-bullet-point" id="auction-lots-archived-list">
             for _, lot := range auctionLots {
                 if !lot.IsActive {
                     @auctionLotListItem(&lot)
