--- a/templates/index.templ
+++ b/templates/index.templ
@@ -108,5 +108,6 @@ templ root(components ...templ.Component) {
       </body>
       <script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
       <script src="/static/modal.js"></script>
+      <script src="/static/index.js"></script>
     </html>
 }
