--- a/templates/index.templ
+++ b/templates/index.templ
@@ -79,7 +79,7 @@ templ mainMain(categories ...types.Category) {
             </h2>
               <ul>
                 for _, category := range categories {
-                  <li><a href={ utils.ConvertToTemplURL("category", category.ID, ) }>{ category.Name }</a></li>
+                  <li><a href={ utils.ConvertToTemplURL("categories", category.ID, ) }>{ category.Name }</a></li>
                 }
               </ul>
         </section>
