feature implement auctions search by name or category  - create a page for listing auctions  - make the index.templ search bar send requests

--- a/static/styles.css
+++ b/static/styles.css
@@ -50,3 +50,10 @@
     max-width: 576px;
     padding: var(--pico-block-spacing-vertical) var(--pico-block-spacing-horizontal);
 }
+
+.cut-to-two-rows {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
