--- a/templates/auctionLot.templ
+++ b/templates/auctionLot.templ
@@ -204,3 +204,95 @@ templ editAuctionLotForm(auctionLot *types.AuctionLot, errors map[string]string,
         <input type="submit" value="Save changes" />
     </form>
 }
+
+templ auctionLotViewListItem(lot *types.AuctionLot) {
+    <li>
+        <h4><a class="contrast" href={ utils.ConvertToTemplURL("auctions", lot.AuctionID, "lots", lot.ID, "view") }>{ lot.Name }</a></h4>
+    </li>
+}
+
+templ viewAuctionLotPage(param *types.AuctionLotViewPageParam) {
+    @main() {
+        <section>
+            <h6>
+                <a class="secondary" href={ utils.ConvertToTemplURL("auctions", param.Lot.AuctionID, "view") }>Go back to auction</a>
+            </h6>
+            <hgroup>
+                <h2>
+                    { param.Lot.Name }
+                </h2>
+                <h3>
+                    Created At: { param.Lot.CreatedAt.Format("15:04 Mon, the 2 of Jan") }
+                </h3>
+            </hgroup>
+            <hr />
+            <div class="grid" style="align-items: start;">
+                @followAuctionLotButton(param.Lot.AuctionID, param.Lot.ID, param.DoesUserFollowLot)
+                <form action="">
+                    <fieldset role="group">
+                        <input
+                            type="number"
+                            step="0.01"
+                            name="bid"
+                            placeholder="Enter your bid"
+                            min={param.Lot.MinimalBid.StringFixedBank(2)}
+                            autocomplete="off"
+                        />
+                        <input type="submit" value="Bid!" />
+                    </fieldset>
+                </form>
+            </div>
+            <table>
+                <thead>
+                    <tr>
+                        if !utils.IsDecimalZero(param.Lot.MinimalBid) {
+                            <th scope="col">Minimal bid</th>
+                        }
+                        if !utils.IsDecimalZero(param.Lot.BinPrice) {
+                            <th scope="col">Bin Price</th>
+                        }
+                        <th scope="col">Reserve Price</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        if !utils.IsDecimalZero(param.Lot.MinimalBid) {
+                            <td>{ utils.DecimalToString(param.Lot.MinimalBid) }</td>
+                        }
+                        if !utils.IsDecimalZero(param.Lot.BinPrice) {
+                            <td>{ utils.DecimalToString(param.Lot.BinPrice) }</td>
+                        }
+                        <td>
+                            if !utils.IsDecimalZero(param.Lot.ReservePrice) {
+                                Reserve Price is set
+                            }
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <p style="height: 400px; overflow: auto;">
+                { param.Lot.Description }
+            </p>
+        </section>
+    }
+}
+
+templ followAuctionLotButton(auctionId, lotId int64, doesUserFollowLot bool) {
+    <button
+        if doesUserFollowLot {
+            hx-post={ utils.ConvertToTemplStringURL("auctions", auctionId, "lots", lotId, "unmake-favorite") }
+            class="outline secondary"
+        } else {
+            hx-post={ utils.ConvertToTemplStringURL("auctions", auctionId, "lots", lotId, "make-favorite") }
+            class="outline contrast"
+        }
+        hx-target="this"
+        hx-swap="outerHTML"
+    >
+        if doesUserFollowLot {
+            Remove from saved
+        } else {
+            Save this lot
+        }
+    </button>
+}
